bridge/base/bin-check-deployment.yaml
#! bin-check-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bin-check
    namespace: bin-checker
    labels:
        com.docker.compose.project: bin-checker
        com.docker.compose.service: bin-check
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: bin-checker
            com.docker.compose.service: bin-check
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: bin-checker
                com.docker.compose.service: bin-check
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: bin-check
                  image: bin-checker-bin-check
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: bin-check-3000
                      containerPort: 3000
