bridge/base/bin-check-expose.yaml
#! bin-check-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: bin-check
    namespace: bin-checker
    labels:
        com.docker.compose.project: bin-checker
        com.docker.compose.service: bin-check
spec:
    selector:
        com.docker.compose.project: bin-checker
        com.docker.compose.service: bin-check
    ports:
        - name: bin-check-3000
          port: 3000
          targetPort: bin-check-3000
